[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/FoodMachine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ClickableArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/Kitchen/Freidora.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/Kitchen/PatatasAceite.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.2351, 56.7626 )

[sub_resource type="Animation" id=3]
resource_name = "default_animation"
tracks/0/type = "value"
tracks/0/path = NodePath("Fries:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "preparing_animation"
tracks/0/type = "value"
tracks/0/path = NodePath("Fries:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Fryer" type="Node2D" groups=[
"Fryer",
]]
script = ExtResource( 1 )
reference = "Fryer"
hide_ingredient = true

[node name="Fryer" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Fries" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Timer" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -103 )
burning_time = -1

[node name="ClickableArea" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="ClickableArea" index="0"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default_animation = SubResource( 3 )
anims/preparing_animation = SubResource( 2 )
[connection signal="food_burned" from="Timer" to="." method="_on_Timer_food_burned"]
[connection signal="food_cooked" from="Timer" to="." method="_on_Timer_food_cooked"]
[connection signal="clicked" from="ClickableArea" to="." method="_on_ClickableArea_clicked"]

[editable path="ClickableArea"]
